src/syntactic_parser/snapshots/Compiler__syntactic_parser__tests__loops.snap
---
source: src/syntactic_parser/mod.rs
expression: ast
---
name: test
module: test_loop
imports:
  - std
globals: {}
functions:
  count_bits:
    visibility: Public
    value:
      name: count_bits
      arguments:
        - name: n
          typ:
            base:
              Normal:
                - u32
            modifiers: []
            span:
              line: 5
              column: 22
              index: 53
              size: 3
          span:
            line: 5
            column: 22
            index: 53
            size: 6
      return_type:
        base:
          Normal:
            - u8
        modifiers: []
        span:
          line: 5
          column: 30
          index: 61
          size: 2
      body:
        - Declaration:
            name: num
            mutable: true
            typ:
              base:
                Normal:
                  - u32
              modifiers: []
              span:
                line: 6
                column: 14
                index: 79
                size: 3
            value:
              value:
                Identifier:
                  - n
              span:
                line: 6
                column: 20
                index: 85
                size: 1
            span:
              line: 6
              column: 21
              index: 86
              size: 17
        - Declaration:
            name: count
            mutable: true
            typ:
              base:
                Normal:
                  - u8
              modifiers: []
              span:
                line: 7
                column: 16
                index: 103
                size: 2
            value:
              value:
                Literal:
                  UInt: 0
              span:
                line: 7
                column: 21
                index: 108
                size: 1
            span:
              line: 7
              column: 22
              index: 109
              size: 18
        - Loop:
            init: ~
            condition:
              value:
                Binary:
                  left:
                    value:
                      Identifier:
                        - num
                    span:
                      line: 8
                      column: 12
                      index: 122
                      size: 3
                  right:
                    value:
                      Literal:
                        UInt: 0
                    span:
                      line: 8
                      column: 18
                      index: 128
                      size: 1
                  op: Gt
              span:
                line: 8
                column: 18
                index: 128
                size: 3
            update: []
            body:
              - Assignment:
                  left:
                    value:
                      Identifier:
                        - count
                    span:
                      line: 9
                      column: 9
                      index: 141
                      size: 5
                  right:
                    value:
                      Call:
                        function:
                          value:
                            Identifier:
                              - u8
                          span:
                            line: 9
                            column: 18
                            index: 150
                            size: 2
                        args:
                          - value:
                              Binary:
                                left:
                                  value:
                                    Identifier:
                                      - num
                                  span:
                                    line: 9
                                    column: 21
                                    index: 153
                                    size: 3
                                right:
                                  value:
                                    Literal:
                                      UInt: 1
                                  span:
                                    line: 9
                                    column: 27
                                    index: 159
                                    size: 3
                                op: BitAnd
                            span:
                              line: 9
                              column: 27
                              index: 159
                              size: 5
                    span:
                      line: 9
                      column: 30
                      index: 162
                      size: 11
                  typ: Plus
                  span:
                    line: 9
                    column: 31
                    index: 163
                    size: 23
              - Assignment:
                  left:
                    value:
                      Identifier:
                        - num
                    span:
                      line: 10
                      column: 9
                      index: 173
                      size: 3
                  right:
                    value:
                      Literal:
                        UInt: 1
                    span:
                      line: 10
                      column: 17
                      index: 181
                      size: 1
                  typ: RightShift
                  span:
                    line: 10
                    column: 18
                    index: 182
                    size: 10
        - Return:
            value:
              Identifier:
                - count
            span:
              line: 12
              column: 12
              index: 201
              size: 5
      span:
        line: 5
        column: 8
        index: 39
        size: 10
  dead_loop:
    visibility: Public
    value:
      name: dead_loop
      arguments: []
      return_type: ~
      body:
        - Loop:
            init: ~
            condition: ~
            update: []
            body:
              - Expression:
                  value:
                    Call:
                      function:
                        value:
                          Identifier:
                            - std
                            - print
                        span:
                          line: 25
                          column: 14
                          index: 414
                          size: 10
                      args:
                        - value:
                            Literal:
                              String: Hello
                          span:
                            line: 25
                            column: 20
                            index: 420
                            size: 7
                  span:
                    line: 25
                    column: 27
                    index: 427
                    size: 9
      span:
        line: 23
        column: 8
        index: 375
        size: 9
  sum:
    visibility: Private
    value:
      name: sum
      arguments:
        - name: list
          typ:
            base:
              Normal:
                - i32
            modifiers:
              - mutable: false
                typ: Slice
            span:
              line: 15
              column: 24
              index: 234
              size: 9
          span:
            line: 15
            column: 24
            index: 234
            size: 15
      return_type:
        base:
          Normal:
            - i32
        modifiers: []
        span:
          line: 15
          column: 32
          index: 242
          size: 3
      body:
        - Declaration:
            name: ret
            mutable: true
            typ:
              base:
                Normal:
                  - i32
              modifiers: []
              span:
                line: 16
                column: 14
                index: 261
                size: 3
            value:
              value:
                Literal:
                  UInt: 0
              span:
                line: 16
                column: 20
                index: 267
                size: 1
            span:
              line: 16
              column: 21
              index: 268
              size: 17
        - Loop:
            init:
              name: i
              mutable: true
              typ:
                base:
                  Normal:
                    - i32
                modifiers: []
                span:
                  line: 17
                  column: 17
                  index: 286
                  size: 3
              value:
                value:
                  Literal:
                    UInt: 0
                span:
                  line: 17
                  column: 23
                  index: 292
                  size: 1
              span:
                line: 17
                column: 24
                index: 293
                size: 15
            condition:
              value:
                Binary:
                  left:
                    value:
                      Identifier:
                        - i
                    span:
                      line: 17
                      column: 26
                      index: 295
                      size: 1
                  right:
                    value:
                      Binary:
                        left:
                          value:
                            Identifier:
                              - list
                          span:
                            line: 17
                            column: 30
                            index: 299
                            size: 4
                        right:
                          value:
                            Identifier:
                              - len
                          span:
                            line: 17
                            column: 35
                            index: 304
                            size: 3
                        op: FieldAccess
                    span:
                      line: 17
                      column: 35
                      index: 304
                      size: 4
                  op: Lt
              span:
                line: 17
                column: 35
                index: 304
                size: 10
            update:
              - Assignment:
                  left:
                    value:
                      Identifier:
                        - i
                    span:
                      line: 17
                      column: 40
                      index: 309
                      size: 1
                  right:
                    value:
                      Literal:
                        UInt: 1
                    span:
                      line: 17
                      column: 45
                      index: 314
                      size: 1
                  typ: Plus
                  span:
                    line: 17
                    column: 46
                    index: 315
                    size: 7
            body:
              - Assignment:
                  left:
                    value:
                      Identifier:
                        - ret
                    span:
                      line: 18
                      column: 9
                      index: 327
                      size: 3
                  right:
                    value:
                      Binary:
                        left:
                          value:
                            Identifier:
                              - list
                          span:
                            line: 18
                            column: 16
                            index: 334
                            size: 4
                        right:
                          value:
                            Identifier:
                              - i
                          span:
                            line: 18
                            column: 21
                            index: 339
                            size: 1
                        op: Indexing
                    span:
                      line: 18
                      column: 22
                      index: 340
                      size: 3
                  typ: Plus
                  span:
                    line: 18
                    column: 23
                    index: 341
                    size: 15
        - Return:
            value:
              Identifier:
                - ret
            span:
              line: 20
              column: 12
              index: 360
              size: 3
      span:
        line: 15
        column: 8
        index: 218
        size: 3
types: {}
